operator/pkg/gateway-api/testdata/gateway/httproute-invalid-backendref-unknown-kind/output/httproute-invalid-backend-ref-unknown-kind.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: invalid-backend-ref-unknown-kind
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - group: unknownkind.example.com
      kind: NonExistent
      name: infra-backend-v1
      port: 8080
status:
  parents:
  - conditions:
    - lastTransitionTime: "2025-07-01T14:19:43Z"
      message: Accepted HTTPRoute
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T14:19:43Z"
      message: Unsupported backend kind NonExistent
      reason: InvalidKind
      status: "False"
      type: ResolvedRefs
    controllerName: io.cilium/gateway-controller
    parentRef:
      name: same-namespace
